# be/user-service/src/api/routes/auth.route.js
@@ -5,5 +5,7 @@ const asyncHandler = require("express-async-handler");
 
 router.post("/register", asyncHandler(authController.register));
 router.post("/login", asyncHandler(authController.login));
+router.post("/forgot-password", asyncHandler(authController.forgotPassword));
+router.post("/change-password", asyncHandler(authController.changePassword));
 
 module.exports = router;
